--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backathon",
+  "name": "atmosphere",
   "version": "0.0.0",
   "description": "atmosphere development.",
   "main": "gulpfile.babel.js",
